--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "sharp": "^0.26.1"
   },
   "devDependencies": {
     "prettier": "2.1.1"
